@@ -12,6 +12,9 @@ Changes from 0.6-0 to 0.6-1
 4.  xsplines can be drawn. Currently uses the <polyline> or <path>
     elements depending on whether the xspline is open or closed. (Simon)
 
+5.  Lines, segments, polylines, xsplines now support the arrow parameter.
+    (Simon)
+
 Changes from 0.5-10 to 0.6-0
 ============================
 
